--- a/music-client/index.html
+++ b/music-client/index.html
@@ -1,44 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MIU Music Station</title>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
     <link href="./main.css" rel="stylesheet" type="text/css" />
     <script src="./main.js"></script>
-</head>
+  </head>
 
-<body>
-    <div class="container">
+  <body>
+    <div class="container-fluid">
+      <div class="row">
         <header id="header">
-            <div id="left">Your Logo here</div>
-            <div id="right">
-                <div id="search">
-                    <input id="search-input">
-                    <button class="btn btn-primary">Search</button>
-                </div>
-                <div id="login-div">
-                    <input id="username">
-                    <input id="password">
-                    <button class="btn btn-primary" id="loginBtn">Login</button>
-                    <div id="errormessage"></div>
-                </div>
-                <div id="logout-div">
-                    <button class="btn btn-primary" id="logoutBtn">Logout</button>
-                </div>
+          <div col-4 id="left">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-file-music-fill"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M12 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm-.5 4.11v1.8l-2.5.5v5.09c0 .495-.301.883-.662 1.123C7.974 12.866 7.499 13 7 13c-.5 0-.974-.134-1.338-.377-.36-.24-.662-.628-.662-1.123s.301-.883.662-1.123C6.026 10.134 6.501 10 7 10c.356 0 .7.068 1 .196V4.41a1 1 0 0 1 .804-.98l1.5-.3a1 1 0 0 1 1.196.98z"
+              />
+            </svg>
+          </div>
+          <div col-8 id="right">
+            <div id="search">
+              <input id="search-input" />
+              <button class="btn btn-primary">Search</button>
             </div>
-
-
+            <div id="login-div">
+              <input id="username" />
+              <input id="password" />
+              <button class="btn btn-primary" id="loginBtn">Login</button>
+              <div id="errormessage"></div>
+            </div>
+            <div id="logout-div">
+              <button class="btn btn-primary" id="logoutBtn">Logout</button>
+            </div>
+          </div>
         </header>
-        <div id="content">
-            Welcome to MIU Music Station
-        </div>
+      </div>
+      <div id="content">Welcome to MIU Music Station</div>
+      <div id="musiclist"></div>
+      <h4>My Playlist</h4>
+
+      <div id="myPlayList"></div>
+      <div id="footer-player">
+        <audio controls>
+          <source src="musicas/bad_romance.mp3" type="audio/mp3" />
+        </audio>
+      </div>
     </div>
-</body>
-
-
+  </body>
 </html>
