"add songs working"

--- a/music-client/index.html
+++ b/music-client/index.html
@@ -58,12 +58,13 @@
 
       <div id="myPlayList">
         <table id="pTable" class="table"></table>
-      </div>
+        <!-- <!-- </div>
       <div id="footer-player">
         <!-- <audio controls>
           <source src="musicas/bad_romance.mp3" type="audio/mp3" />
         </audio> -->
-      </div>
+      <!-- </div> -->
+      -->
     </div>
   </body>
 </html>
