--- a/music-client/index.html
+++ b/music-client/index.html
@@ -18,7 +18,7 @@
 
   <body>
     <div class="container-fluid">
-      <header id="header">
+      <header class="navbar navbar-light bg-success" id="header">
         <div col-4 id="left">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -32,6 +32,7 @@
               d="M12 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm-.5 4.11v1.8l-2.5.5v5.09c0 .495-.301.883-.662 1.123C7.974 12.866 7.499 13 7 13c-.5 0-.974-.134-1.338-.377-.36-.24-.662-.628-.662-1.123s.301-.883.662-1.123C6.026 10.134 6.501 10 7 10c.356 0 .7.068 1 .196V4.41a1 1 0 0 1 .804-.98l1.5-.3a1 1 0 0 1 1.196.98z"
             />
           </svg>
+          <small>MUSIC PLAYER</small>
         </div>
         <div col-8 id="right">
           <div id="search">
@@ -50,21 +51,24 @@
         </div>
       </header>
 
-      <div id="content">Welcome to MIU Music Station</div>
-      <div id="musiclist">
-        <table id="mTable" class="table"></table>
-      </div>
-      <h4>My Playlist</h4>
+      <div class="p-3 mb-2 bg-light text-dark">
+        <div class="fw-bold" id="content"></div>
 
-      <div id="myPlayList">
-        <table id="pTable" class="table"></table>
-        <!-- <!-- </div>
+        <div id="musiclist">
+          <table id="mTable" class="table table-hover table-success"></table>
+        </div>
+
+        <div id="myPlayList">
+          <h6>My Playlist</h6>
+          <table id="pTable" class="table table-hover table-success"></table>
+          <!-- <!-- </div>
       <div id="footer-player">
         <!-- <audio controls>
           <source src="musicas/bad_romance.mp3" type="audio/mp3" />
         </audio> -->
-      <!-- </div> -->
-      -->
+          <!-- </div> -->
+        </div>
+      </div>
     </div>
   </body>
 </html>
