--- a/music-client/index.html
+++ b/music-client/index.html
@@ -40,8 +40,8 @@
             <button id="searchBtn" class="btn btn-primary">Search</button>
           </div>
           <div id="login-div">
-            <input id="username" />
-            <input id="password" />
+            <input id="username" type="text" placeholder="username" />
+            <input id="password" type="password" placeholder="password" />
             <button class="btn btn-primary" id="loginBtn">Login</button>
             <div id="errormessage"></div>
           </div>
@@ -67,6 +67,15 @@
           <source src="musicas/bad_romance.mp3" type="audio/mp3" />
         </audio> -->
           <!-- </div> -->
+          <div
+            id="footer-player"
+            class="col col-sm-offset-4 embed-responsive embed-responsive-4by3"
+          >
+            <audio controls class="embed-responsive-item">
+              <source src=""type ="audio/mpeg"/>
+            </audio>
+          </div>
+          </div>
         </div>
       </div>
     </div>
